# Policy-Doc-based-RAG-Design

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  logging.py  middleware.py
app/ingest/: chunking.py  loaders.py
app/rag/: embeddings.py  generator.py  indexer.py  prompts.py  retriever.py  schemas.py
app/storage/: qdrant_store.py
docs/: Sample.txt  pricing.txt
tests/: test_chunking.py  test_generator.py
