[project]
name = "newpage-docs-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
   "pypdf>=4.0.0",
   "pytest>=8.0.0",
  "ruff>=0.5.0",

  
  "qdrant-client>=1.7.0",
  "openai>=1.40.0",

  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "python-dotenv>=1.0.1",


]

[tool.ruff]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
